# software_challenge

software_training_assignment/: CMakeLists.txt  package.xml
software_training_assignment/action/: Waypoint.action
software_training_assignment/include/software_training_assignment/: visibility.h
software_training_assignment/launch/: software_training_assignment.launch.py
software_training_assignment/src/: ros2_clear_client.cpp  ros2_message_publisher.cpp  ros2_reset_turtle_service.cpp  ros2_spawn_client.cpp  ros2_turn_subscriber.cpp  waypoint_action_server.cpp
